# rube-iks-cube

./: .env.template  .gitignore  README.md  hackernews_integration.py  introspection.py  main.py  mcp_client.py  oauth_client.py  openai_integration.py  pyproject.toml  run.sh
rube_iks_cube.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
